--- a/index.html
+++ b/index.html
@@ -15,19 +15,27 @@
     <meta property="og:description" content="Step into the lab. Explore experimental sims, productivity tools, and the ultimate cricket & football archives.">
     <meta property="og:image" content="/logo.png">
 
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dixitlabs.pages.dev/">
+    <meta property="twitter:title" content="Dixit Labs | Atharv Dixit">
+    <meta property="twitter:description" content="Experimental projects and data archives by Atharv Dixit.">
+    <meta property="twitter:image" content="/logo.png">
+
     <link rel="icon" type="image/png" sizes="512x512" href="/logo.png">
+    <link rel="shortcut icon" href="/logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=JetBrains+Mono:wght@300;700&display=swap" rel="stylesheet">
     
 <style>
 :root { 
     --neon-blue:#38bdf8; --neon-pink:#f472b6; --neon-green:#22c55e; 
-    --neon-orange:#fb923c; --neon-red:#ff0033; --neon-purple:#a855f7; --bg-dark:#020617; 
+    --neon-orange:#fb923c; --neon-red:#ff0033; --bg-dark:#020617; 
 }
 
 body { 
     margin:0; background-color:var(--bg-dark); color:white; 
     font-family:'Orbitron',sans-serif; text-align:center; 
-    overflow-x:hidden; min-height: 400vh; /* Extremely Elongated for that Deep Scroll */
+    overflow-x:hidden; min-height: 280vh; /* Elongated further */
     transition: background 0.8s ease, box-shadow 0.8s ease;
 }
 
@@ -93,43 +101,14 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 
 /* --- STATS & BIO --- */
 .stats-container { max-width: 1000px; margin: 150px auto 0; padding: 40px 80px; background: rgba(15,23,42,0.5); border: 1px solid rgba(56,189,248,0.1); border-top: 5px solid var(--neon-blue); border-radius: 15px 15px 0 0; text-align: left; }
-.about-section { max-width: 1000px; margin: 0 auto 100px; padding: 60px 80px; background: rgba(15,23,42,0.5); border: 1px solid rgba(56,189,248,0.1); border-top: 1px solid rgba(255,255,255,0.05); text-align: left; border-radius: 0 0 15px 15px; }
+.about-section { max-width: 1000px; margin: 0 auto 150px; padding: 60px 80px; background: rgba(15,23,42,0.5); border: 1px solid rgba(56,189,248,0.1); border-top: 1px solid rgba(255,255,255,0.05); text-align: left; border-radius: 0 0 15px 15px; }
 .about-header { color: var(--neon-green); font-size: 28px; font-weight: 900; margin-bottom: 40px; letter-spacing: 5px; }
 .bio-text { font-family: 'JetBrains Mono'; color: #cbd5e1; font-size: 17px; line-height: 2.2; }
 .stat-item { display: inline-block; margin-right: 40px; font-family: 'JetBrains Mono'; font-size: 14px; }
 .stat-label { color: var(--neon-blue); font-weight: bold; }
 
-/* --- SYSTEM LOGS (ELONGATION FEATURE) --- */
-.system-logs { max-width: 1000px; margin: 100px auto; padding: 40px; background: #000; border: 1px solid #1e293b; font-family: 'JetBrains Mono'; font-size: 11px; text-align: left; color: #475569; overflow: hidden; line-height: 2; border-left: 3px solid var(--neon-blue); }
-.log-entry { margin-bottom: 5px; }
-.log-entry span { color: var(--neon-blue); margin-right: 10px; }
-
-/* --- REVIEWS OPTION & SOCIALS --- */
-.footer-container { margin-top: 150px; padding-bottom: 100px; position: relative; }
-
-.reviews-link-wrap { margin-bottom: 40px; display: flex; flex-direction: column; align-items: center; }
-.review-btn-small { 
-    background: rgba(168, 85, 247, 0.1); 
-    border: 1px solid var(--neon-purple); 
-    color: var(--neon-purple); 
-    padding: 8px 20px; 
-    font-size: 10px; 
-    letter-spacing: 3px; 
-    text-decoration: none; 
-    border-radius: 50px; 
-    transition: 0.4s; 
-    text-transform: uppercase;
-    font-weight: bold;
-    box-shadow: 0 0 10px rgba(168, 85, 247, 0.2);
-}
-.review-btn-small:hover { 
-    background: var(--neon-purple); 
-    color: black; 
-    box-shadow: 0 0 25px var(--neon-purple); 
-    transform: scale(1.05); 
-}
-
-.social-footer-strip { display: flex; flex-direction: column; align-items: center; gap: 30px; }
+/* --- SOCIALS - UPSCALED --- */
+.social-footer-strip { margin-bottom: 150px; display: flex; flex-direction: column; align-items: center; gap: 30px; }
 .connect-text { font-family: 'Orbitron'; font-size: 14px; letter-spacing: 10px; color: #ffffff; font-weight: 900; text-transform: uppercase; text-shadow: 0 0 15px rgba(255,255,255,0.8); }
 .social-icons-wrap { display: flex; gap: 40px; }
 .social-icon-link svg { width: 42px; height: 42px; fill: #475569; transition: 0.3s; }
@@ -137,10 +116,6 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 .yt-icon:hover svg { fill: var(--neon-red); filter: drop-shadow(0 0 15px var(--neon-red)); transform: scale(1.15); }
 
 .hidden { display: none !important; }
-
-/* Scroll Hint Overlay */
-.scroll-hint { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); font-family: 'JetBrains Mono'; font-size: 10px; color: rgba(255,255,255,0.2); animation: pulse 2s infinite; }
-@keyframes pulse { 0%, 100% { opacity: 0.2; } 50% { opacity: 0.5; } }
 </style>
 </head>
 
@@ -260,41 +235,22 @@ header { padding: 120px 20px 60px; min-height: 250px; }
         </div>
     </section>
 
-    <section class="system-logs" id="systemLogs">
-        <div class="log-entry"><span>[10:24:01]</span> AUTHENTICATING_SESSION... GRANTED</div>
-        <div class="log-entry"><span>[10:24:05]</span> PARSING_CRICKET_DATABASE_V4.2... COMPLETE</div>
-        <div class="log-entry"><span>[10:24:09]</span> RENDERING_NEON_CORE... SUCCESS</div>
-        <div class="log-entry"><span>[10:24:12]</span> DETECTING_USER_LATENCY... 24ms</div>
-        <div class="log-entry"><span>[10:24:15]</span> INJECTING_REVIEWS_MODULE... DONE</div>
-        <div class="log-entry"><span>[10:24:18]</span> STATUS: ALL_SYSTEMS_GO</div>
-        <div class="log-entry"><span>[10:24:22]</span> IDLE_ROUTINE_STARTED... MONITORING_CHAOS</div>
-    </section>
-
-    <div class="footer-container">
-        
-        <div class="reviews-link-wrap">
-            <a href="reviews.html" class="review-btn-small">> VIEW_SYSTEM_REVIEWS</a>
+    <div class="social-footer-strip">
+        <div class="connect-text">CONNECT_TO_LABS</div>
+        <div class="social-icons-wrap">
+            <a href="https://x.com/dixlabsOFF" target="_blank" class="social-icon-link x-icon">
+                <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+            </a>
+            <a href="https://www.youtube.com/@dixitlabs" target="_blank" class="social-icon-link yt-icon">
+                <svg viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+            </a>
         </div>
-
-        <div class="social-footer-strip">
-            <div class="connect-text">CONNECT_TO_LABS</div>
-            <div class="social-icons-wrap">
-                <a href="https://x.com/dixlabsOFF" target="_blank" class="social-icon-link x-icon">
-                    <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
-                </a>
-                <a href="https://www.youtube.com/@dixitlabs" target="_blank" class="social-icon-link yt-icon">
-                    <svg viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
-                </a>
-            </div>
-        </div>
-
-        <footer style="padding:100px 20px; font-family:'JetBrains Mono'; font-size:12px; opacity:0.3; letter-spacing:5px;">
-            DIXIT LABS // 2026 // EST. IN CHAOS
-        </footer>
     </div>
-</div>
 
-<div class="scroll-hint">SCROLL_FOR_MORE_INTEL</div>
+    <footer style="padding:100px 20px; font-family:'JetBrains Mono'; font-size:12px; opacity:0.3; letter-spacing:5px;">
+        DIXIT LABS // 2026 // EST. IN CHAOS
+    </footer>
+</div>
 
 <script>
 const env = document.getElementById('env-layer');
@@ -396,9 +352,9 @@ function filterSelection(cat, el) {
     document.querySelectorAll(".tab-link").forEach(t => t.classList.remove("active"));
     el.classList.add("active");
     updateHeader(cat);
-    const grid = document.getElementById('projectsGrid'), stats = document.getElementById('statsSection'), bio = document.getElementById('bioSection'), aksa = document.getElementById('aksa-tab-content'), logs = document.getElementById('systemLogs');
-    if (cat === 'aksa') { [grid, stats, bio, logs].forEach(x => x.classList.add('hidden')); aksa.style.display = 'flex'; }
-    else { [grid, stats, bio, logs].forEach(x => x.classList.remove('hidden')); aksa.style.display = 'none'; 
+    const grid = document.getElementById('projectsGrid'), stats = document.getElementById('statsSection'), bio = document.getElementById('bioSection'), aksa = document.getElementById('aksa-tab-content');
+    if (cat === 'aksa') { [grid, stats, bio].forEach(x => x.classList.add('hidden')); aksa.style.display = 'flex'; }
+    else { [grid, stats, bio].forEach(x => x.classList.remove('hidden')); aksa.style.display = 'none'; 
         document.querySelectorAll(".card").forEach(c => {
             const h = c.querySelector('h3').innerText;
             const isMatch = h.includes("BREAKER") || h.includes("AMBANI") || h.includes("DUMPSTER") ? 'game' : 
