--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 
     <footer style="padding:100px 20px; font-family:'JetBrains Mono'; font-size:12px; opacity:0.3; letter-spacing:5px;">
         DIXIT LABS // 2026 // EST. IN CHAOS
+        Dixlabs builds experimental apps, games, productivity tools and creative web experiences created by a teen founder.
     </footer>
 </div>
 
@@ -366,3 +367,4 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
