--- a/index.html
+++ b/index.html
@@ -125,9 +125,23 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 .yt-icon:hover svg { fill: var(--neon-red); filter: drop-shadow(0 0 15px var(--neon-red)); transform: scale(1.15); }
 
 .hidden { display: none !important; }
+    <script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "Organization",
+ "name": "Dixlabs",
+ "url": "https://dixlabs.vercel.app",
+ "logo": "https://dixlabs.vercel.app/logo.png",
+ "sameAs": [
+   "https://github.com/dixlabs",
+   "https://medium.com/@Dixit",
+   "https://x.com/dixlabsOFF"
+ ]
+}
+</script>
 </style>
 </head>
-
+    
 <body>
 
 <div id="liveHUD">
@@ -394,3 +408,4 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
