--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@ header { padding: 120px 20px 60px; min-height: 250px; }
     </section>
 
     <footer style="padding:100px 20px; font-family:'JetBrains Mono'; font-size:12px; opacity:0.3; letter-spacing:5px;">
-        DIXIT LABS // 2026 // EST. IN CHAOS
+        DIXIT LABS // 2026 // EST. IN CHAOS |||  Dixlabs Builds interactive games, focus apps, fun chatbots and apps showing factts.
+        MADE BY A TEEN DEVELOPER
     </footer>
 </div>
 
@@ -353,3 +354,4 @@ function filterSelection(cat, el) {
 </script>
 </body>
 </html>
+
